@@ -1,32 +1,33 @@
 package com.positivity.customer.internal.service;
 
+import java.time.Clock;
 import java.time.LocalDateTime;
 import java.util.List;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
-import com.positivity.customer.internal.dto.PromotionRedemptionMapper;
-import com.positivity.customer.internal.entity.PromotionCounter;
-import com.positivity.customer.internal.enums.RedemptionStatus;
 import org.jspecify.annotations.NonNull;
 import org.springframework.dao.DataIntegrityViolationException;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
+import com.positivity.customer.internal.dto.PromotionRedemptionMapper;
 import com.positivity.customer.internal.dto.PromotionRedemptionResponse;
-import com.positivity.customer.internal.entity.PromotionRedemption;
 import com.positivity.customer.internal.dto.RecordRedemptionRequest;
+import com.positivity.customer.internal.entity.PromotionCounter;
+import com.positivity.customer.internal.entity.PromotionRedemption;
+import com.positivity.customer.internal.enums.RedemptionStatus;
 import com.positivity.customer.internal.exception.DuplicateRedemptionException;
 import com.positivity.customer.internal.repository.PromotionCounterRepository;
 import com.positivity.customer.internal.repository.PromotionRedemptionRepository;
-import com.positivity.security.common.SecurityContextHelper;
 import com.positivity.customer.service.PromotionRedemptionService;
+import com.positivity.security.common.SecurityContextHelper;
 
 import lombok.RequiredArgsConstructor;
 
 @Service
 @RequiredArgsConstructor
 public class PromotionRedemptionServiceImpl implements PromotionRedemptionService {
+    private final Clock clock;
 
     private final PromotionRedemptionRepository promotionRedemptionRepository;
     private final PromotionCounterRepository promotionCounterRepository;
@@ -55,7 +56,7 @@ public class PromotionRedemptionServiceImpl implements PromotionRedemptionServic
                 : RedemptionStatus.RECORDED);
         redemption.setRedemptionTimestamp(request.getRedemptionTimestamp() != null
                 ? request.getRedemptionTimestamp()
-                : LocalDateTime.now());
+                : LocalDateTime.now(clock));
 
         PromotionRedemption saved;
         try {
@@ -75,7 +76,7 @@ public class PromotionRedemptionServiceImpl implements PromotionRedemptionServic
         return promotionRedemptionRepository.findByCustomerId(customerId)
                 .stream()
                 .map(PromotionRedemptionMapper::toResponse)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     private void incrementPromotionCounter(@NonNull UUID promotionId) {
@@ -91,7 +92,8 @@ public class PromotionRedemptionServiceImpl implements PromotionRedemptionServic
             promotionCounterRepository.saveAndFlush(createdCounter);
             return;
         } catch (DataIntegrityViolationException ex) {
-            // Counter was concurrently created after our update miss; fall through to retry update.
+            // Counter was concurrently created after our update miss; fall through to retry
+            // update.
         }
 
         if (promotionCounterRepository.incrementTotalUsageCount(promotionId) == 0) {
